charts/factory/manuela-staging/templates/messaging/messaging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: messaging
  name: messaging
  namespace: manuela-staging-messaging
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: messaging
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: messaging
        deploymentconfig: messaging
    spec:
      containers:
      - image: messaging
        #imagePullPolicy: Always
        name: messaging
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe: 
          httpGet:   
            path: /health
            port: 3000
          initialDelaySeconds: 15  
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3  
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
