charts/factory/manuela-staging/templates/messaging/messaging-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: messaging
  namespace: manuela-staging-messaging
spec:
  subdomain: messaging-manuela-staging-messaging
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: messaging
    weight: 100
  wildcardPolicy: None
